# rr-mcp

./: .gitignore  LICENSE  README.md  RR_DEBUGGING_GUIDE.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
src/rr_mcp/: __init__.py  errors.py  gdbmi.py  models.py  server.py  session.py  trace.py
tests/: README.md  __init__.py  conftest.py  test_operations_integration.py  test_server.py  test_session.py  test_session_integration.py  test_trace.py  test_trace_integration.py
tests/fixtures/programs/: CMakeLists.txt  cpp_features.cpp  crash.cpp  fork_no_exec.cpp  fork_test.cpp  recursive.cpp  simple.cpp  threads.cpp
